...
            const ProfilePage(),
          ];

    final List<BottomNavigationBarItem> items = _isSeller
        ? [
            const BottomNavigationBarItem(
                icon: Icon(Icons.search), label: 'Browse'),
            const BottomNavigationBarItem(
                icon: Icon(Icons.inventory_2), label: 'My Products'),
            BottomNavigationBarItem(
              icon: Stack(
                clipBehavior: Clip.none,
                children: [
...
                        right: -6, top: -2, child: _buildBadge(_unreadCount)),
                ],
              ),
              label: 'Chat',
            ),
            const BottomNavigationBarItem(
                icon: Icon(Icons.person), label: 'Profile'),
          ]
        : [
            const BottomNavigationBarItem(
                icon: Icon(Icons.search), label: 'Browse'),
            BottomNavigationBarItem(
              icon: Stack(
...
